# wind-engine-windows

./: .gitignore  CMakeLists.txt  Compile_exe.bat  LICENSE  OpenGLWidget.cpp  OpenGLWidget.hpp  README.md  compile_so.bat  jni_main.cpp  main.cpp  mainwindow.h
.cache/clangd/index/: OpenGLWidget.cpp.E82D1AE67DADC1BD.idx  OpenGLWidget.hpp.128E58458FE4ADD5.idx  main.cpp.98FAEC216A9D4913.idx  mainwindow.cpp.F8A77258A84B6969.idx  mainwindow.h.A82BF02ED0E1AFA1.idx
.github/: copilot-instructions.md
Docs/: 3D_LOADING_GPU_PIPELINE.md  CPP_Developer_Roadmap.md  CPP_Roadmap.csv  MODEL_LOADING_SYSTEM.md  OPENGL_API_REFERENCE.md  OPENGL_IMPLEMENTATION_GUIDE.md  PROJECT_OPTIMIZATION_ANALYSIS.md  TEXTURE_LOADING_FIX.md  TEXTURE_UNIT_Corruption.md  VSCode+QT.md
EGL_Component/: CMakelists.txt
EGL_Component/Common/: CommonTypes.hpp  macros.h
EGL_Component/Component_3DModels/: ModelRenderer.cpp  ModelRenderer.hpp
EGL_Component/Component_AxisHelper/: axis_helper.hpp
EGL_Component/Component_Box/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.hpp  README.md
EGL_Component/Component_Camera/: Camera.cpp  Camera.hpp
EGL_Component/Component_FBO/: LyFBO.cpp  LyFBO.h  LyFBOMSAA.cpp  LyFBOMSAA.h
EGL_Component/Component_LoadingView/: OpenGL_LoadingView.hpp
EGL_Component/Component_Mouse/: CameraInteractor.cpp  CameraInteractor.hpp
EGL_Component/Component_Offscreen/: OffscreenRenderer.cpp  OffscreenRenderer.hpp
EGL_Component/Component_Shader_Blinn_Phong/: Convert_GLSL_to_h.py  PhongModelProgram.hpp  WindShader.hpp  validate_shaders.py  wind.frag.core.h  wind.frag.glsl  wind.frag.h  wind.vert.core.h  wind.vert.glsl  wind.vert.h
EGL_Component/Component_Silhouette/: FlexableTouchPad.hpp  FlexableTouchPad_Instancing.hpp  IntFBO.cpp  IntFBO.hpp  SilhouetteProgram.hpp  SilhouetteProgram_Instancing.hpp
EGL_Component/Component_SkyBox/: SkyBox.hpp  SkyBoxShader.hpp
EGL_Component/Component_TextureManager/: TextureManager.cpp  TextureManager.hpp  TextureManager_Feature.md
EGL_Component/Component_UBO/: GlobalBindingPoints.hpp  UniformBuffer.cpp  UniformBuffer.hpp
EGL_Component/ModelLoader/: ModelLoader_GLTF.cpp  ModelLoader_GLTF.hpp  ModelLoader_Universal.cpp  ModelLoader_Universal.hpp  ModelLoader_Universal_Instancing.cpp  ModelLoader_Universal_Instancing.hpp
EGL_Component/Shader/: ShaderLoader.cpp  ShaderLoader.h  easyTestShaderCode.h  esayTest.frag.glsl  esayTest.vert.glsl
EGL_Component/component/: DebugPickProgram.hpp  ModelLoader.hpp  ModelProgram.hpp  PickProgram.hpp  ShaderProgram.hpp
models/: material.mtl
